change from classloader to Files.readAllBytes